--- a/app/src/main/res/layout/activity_video_player2.xml
+++ b/app/src/main/res/layout/activity_video_player2.xml
@@ -33,7 +33,6 @@
             android:layout_width="match_parent"
             android:layout_height="44dp">
             <TextView
-                android:visibility="gone"
                 android:id="@+id/video_player_tv_storage"
                 android:textSize="15sp"
                 android:layout_weight="1"
@@ -51,11 +50,12 @@
                 android:id="@+id/video_player_tv_public"
                 android:textSize="15sp"
                 android:gravity="center"
-                android:text="保存到相册"
+                android:text="发布"
                 android:textColor="@color/white"
                 android:background="@drawable/color_fc4253_radius_5_bg"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
+
         </LinearLayout>
     </LinearLayout>
     <ImageView
